--- a/virtual-scene-switcher/profiles/scene-switcher.yaml
+++ b/virtual-scene-switcher/profiles/scene-switcher.yaml
@@ -100,6 +100,24 @@ preferences:
       minimum: 1
       default: 1
       maximum: 100
+  - name: multiTapIntro
+    title: "MULTI-TAP emulation"
+    description: "The Switcher can turn any button into a multi-tap capable one! Use the action Register Pressed in your button pressed event. The active scene will be 1 for a single-tap, 2 for double-tap, 3 for triple and so on. If your button has native double-tap, do the same with Double and increase the delay."
+    required: true
+    preferenceType: string
+    definition:
+      stringType: text
+      minLength: 0
+      maxLength: 0
+      default: ""
+  - title: "Next tap waiting time (def: 500 ms)"
+    name: multiTapDelayMillis
+    required: true
+    preferenceType: number
+    definition:
+      minimum: 200
+      default: 500
+      maximum: 2000
   - name: "introPreset"
     title: "PRESET / RECALL mode"
     description: "Changes behaviour to allow scheduling a preset scene (Scene N actions) without activating it until it is recalled (Reactivate action). Reactivate will not reactivate the current scene but the current preset. Mind that presets do not survive driver restarts, default scene will reactivate instead."
