--- a/virtual-scene-switcher/profiles/scene-switcher.yaml
+++ b/virtual-scene-switcher/profiles/scene-switcher.yaml
@@ -50,7 +50,7 @@ preferences:
       maximum: 1000      
   - name: "introAutocycle"
     title: "AUTO-CYCLE tweaks"
-    description: "When using auto-cycle do not forget to stop it. Any command will stop it, not just Stop, and you can configure whether the same starting action will also stop it. Otherwise, it will stop itself after completing a whole loop or, in linear mode, reaching the end."
+    description: "The feature is designed for short attended scenarios only, it is not recommended for other use cases. Besides Stop, any command will stop it. The same start action can be configured as stop. By default, it will stop itself after completing a whole loop or, in linear mode, reaching the end."
     required: true
     preferenceType: string
     definition:
@@ -84,6 +84,14 @@ preferences:
     definition:
       minimum: 500
       default: 1000
+      maximum: 1800000
+  - title: "Additional random offset (def: 0 ms)"
+    name: autocycleRandomOffset
+    required: true
+    preferenceType: number
+    definition:
+      minimum: 0
+      default: 0
       maximum: 1800000
   - title: "Circular behaviour if not stopped"
     name: autostopBehaviour
@@ -119,10 +127,10 @@ preferences:
     definition:
       minimum: 200
       default: 500
-      maximum: 2000
+      maximum: 4000
   - name: "introPreset"
     title: "PRESET / RECALL mode"
-    description: "Changes behaviour to allow scheduling a preset scene (Scene N actions) without activating it until it is recalled (Reactivate action). Reactivate will not reactivate the current scene but the current preset. Mind that presets do not survive driver restarts, default scene will reactivate instead."
+    description: "Changes behaviour to allow scheduling a preset scene (Scene N actions) without activating it until it is recalled (Reactivate action). Reactivate will not reactivate the current scene but the current preset. If the preset could not be recalled, current or default scene will activate instead."
     required: true
     preferenceType: string
     definition:
