--- a/virtual-scene-switcher/profiles/scene-switcher.yaml
+++ b/virtual-scene-switcher/profiles/scene-switcher.yaml
@@ -50,7 +50,7 @@ preferences:
       maximum: 1000      
   - name: "introAutocycle"
     title: "AUTO-CYCLE tweaks"
-    description: "The feature is designed for short attended scenarios only, it is not recommended for other use cases. Besides Stop, any command will stop it. The same start action can be configured as stop. By default, it will stop itself after completing a whole loop or, in linear mode, reaching the end."
+    description: "The feature is designed for short attended scenarios only. Besides Stop, any command will stop it. The same start action can be configured as stop. By default, it will stop itself after completing a whole loop or, in linear mode, reaching the end."
     required: true
     preferenceType: string
     definition:
@@ -85,14 +85,6 @@ preferences:
       minimum: 500
       default: 1000
       maximum: 1800000
-  - title: "Additional random offset (def: 0 ms)"
-    name: autocycleRandomOffset
-    required: true
-    preferenceType: number
-    definition:
-      minimum: 0
-      default: 0
-      maximum: 1800000
   - title: "Circular behaviour if not stopped"
     name: autostopBehaviour
     required: true
@@ -109,7 +101,53 @@ preferences:
     definition:
       minimum: 1
       default: 1
-      maximum: 100
+      maximum: 1000
+  - name: longCyclesIntro
+    title: "LONG SPANNING auto-cycle"
+    description: "In minutes. Overrides the switching delay when non-zero. For use cases like randomly turning on-off lights to simulate presence. Do not use for safety or security-critical purposes! Persisted cycles may be restored after a hub or driver restart but have a potential cost in flash memory wear."
+    required: true
+    preferenceType: string
+    definition:
+      stringType: text
+      minLength: 0
+      maxLength: 0
+      default: ""
+  - title: "Switching delay (minutes)"
+    name: autocycleDelayMinutes
+    required: true
+    preferenceType: number
+    definition:
+      minimum: 0
+      default: 0
+      maximum: 1440
+  - title: "Additional random offset (minutes)"
+    name: autocycleRandomMinutes
+    required: true
+    preferenceType: number
+    definition:
+      minimum: 0
+      default: 0
+      maximum: 1440      
+  - title: "Persist longer cycles (def: 30 min)"
+    name: autocyclePersistMin
+    required: true
+    preferenceType: integer
+    definition:
+      minimum: 1
+      default: 30
+      maximum: 2881
+  - title: "Starting scene also delayed"
+    name: autocycleDelayedStart
+    required: true
+    preferenceType: boolean
+    definition:
+      default: false      
+  - title: "Switch only once"
+    name: autocycleSwitchOnce
+    required: true
+    preferenceType: boolean
+    definition:
+      default: false            
   - name: multiTapIntro
     title: "MULTI-TAP emulation"
     description: "The Switcher can turn any button into a multi-tap capable one! Use the action Register Pressed in your button pressed event. The active scene will be 1 for a single-tap, 2 for double-tap, 3 for triple and so on. If your button has native double-tap, do the same with Double and increase the delay."
@@ -161,6 +199,7 @@ preferences:
     definition:
       minimum: 0
       default: 800
+      maximum: 1800000      
   - title: "Other actions window (def: 0 ms)"
     name: sideEffectNoTargetWindow
     required: true
@@ -168,3 +207,4 @@ preferences:
     definition:
       minimum: 0
       default: 0
+      maximum: 1800000
